--- a/www/index.html
+++ b/www/index.html
@@ -4,14 +4,13 @@
     <meta charset="utf-8" />
     <title></title>
     <script>
-        screen.orientation.addEventListener('change', function () {
-            console.log('new orientation is ', screen.orientation.type);
-        });
+        window.plugins.html5Video.initialize({"video1" : "video1file.mp4"}, function initializeIsFinished() {
+		  window.plugins.html5Video.play("video1");
+		});
+		
     </script>
 </head>
 <body style="margin:0px;height:100%;line-height:100%;">
-    <video autoplay style="width:100%;vertical-align:middle;" loop>
-        <source src="media/exo.mp4" type="video/mp4">
-    </video> 
+    <video autoplay style="width:100%;vertical-align:middle;" loop src="media/exo.mp4" type="video/mp4" loop id="intro"></video> 
 </body>
 </html>
