--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <script type="text/javascript" charset="utf-8" src="Html5Video.js"></script>
+    <script>
+		
+		window.plugins.videoPlayer.play("media/exo.mp4");
+		
+    </script>
 </head>
 <body style="margin:0px;height:100%;line-height:100%;">
     <video autoplay style="width:100%;vertical-align:middle;" loop src="media/exo.mp4" type="video/mp4" loop id="intro"></video> 
