--- a/www/index.html
+++ b/www/index.html
@@ -5,11 +5,10 @@
     <title></title>
     <script>
 		
-		window.plugins.videoPlayer.play("media/exo.mp4");
+		//window.plugins.videoPlayer.play("https://www.youtube.com/watch?v=en_sVVjWFKk");
 		
     </script>
 </head>
 <body style="margin:0px;height:100%;line-height:100%;">
-    <video autoplay style="width:100%;vertical-align:middle;" loop src="media/exo.mp4" type="video/mp4" loop id="intro"></video> 
 </body>
 </html>
