--- a/www/index.html
+++ b/www/index.html
@@ -10,5 +10,8 @@
     </script>
 </head>
 <body style="margin:0px;height:100%;line-height:100%;">
+	<img src="media/intro.gif"/>
 </body>
 </html>
+
+
