--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     </script>
 </head>
 <body style="margin:0px;height:100%;line-height:100%;text-align:center;vertical-align:center;">
-	<img src="media/intro.gif" style="width:80%;"/>
+	<img src="media/introexoticosvipA.gif" style="width:80%;"/>
 </body>
 </html>
 
