--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,83 @@
     <title></title>
     <script>
 		
-		//window.plugins.videoPlayer.play("https://www.youtube.com/watch?v=en_sVVjWFKk");
+		function IntercambioVisual(obj1,obj2){
+			if(obj1=="string"){
+				obj1= document.getElementById(obj1);
+			}
+			if(obj1=="string"){
+				obj2= document.getElementById(obj2);
+			}
+			obj1.style.display="none";			
+			obj2.style.display="block";
+		}
+		
 		
     </script>
 </head>
-<body style="margin:0px;height:100%;line-height:100%;text-align:center;vertical-align:center;">
-	<img src="media/introexoticosvipA.gif" style="width:80%;"/>
+<body style="margin:0px;height:100%;display:flex;align-items:center;text-align:center;">
+	<img src="media/logo.png" style="width:50%;display:block;margin:auto;" onclick="IntercambioVisual(this,'pantalla1');"/>
+	
+	<div id="pantalla1" style="display:none;">		
+		 <img src="media/logo.png" style="width:60%;display:block;margin:auto;margin-top:20px;" />
+		<div style="background:url(media/pedal1.png);background-size:contain;height:250px;width:80%;margin:auto;margin-top:20px;background-repeat:no-repeat;padding-top:50px;">
+			<input type="text" style="width:80%;margin:50px auto;display:block;border:0px;padding:6px;border-radius:5px;border:2px solid #ff0000;" placeholder="Ingrese usuario"/>
+		</div>
+	</div>
+	
+	<div id="pantalla2" style="display:none;">		
+		 <img src="media/logo.png" style="width:60%;display:block;margin:auto;margin-top:20px;" />
+		<div style="background:url(media/pedal2.png);background-size:contain;height:250px;width:80%;margin:auto;margin-top:20px;background-repeat:no-repeat;padding-top:50px;">
+			<input type="text" style="width:80%;margin:50px auto;display:block;border:0px;padding:6px;border-radius:5px;border:2px solid #ff0000;" placeholder="Contraseña" />
+		</div>
+	</div>
+	
+	<div id="pantalla3" style="display:none;">		
+		  <img src="media/logo.png" style="width:60%;display:block;margin:auto;margin-top:20px;" />
+			<div style="background:url(media/pedal3.png);background-size:contain;height:250px;width:80%;margin:auto;margin-top:20px;background-repeat:no-repeat;background-position:center;padding-top:50px;">
+			</div>
+	</div>
+	
+	<div id="pantalla4" style="display:none;">		
+		
+	</div>
+	
+	<div id="pantalla5" style="display:none;">		
+		
+	</div>
+	
+	<div id="pantalla6" style="display:none;">		
+		 
+	</div>
+	
+	<div id="pantalla7" style="display:none;">		
+		
+	</div>
+	
+	<div id="pantalla8" style="display:none;">		
+		
+	</div>
+	
+	<div id="pantalla9" style="display:none;">		
+
+	</div>
+	
+	<div id="pantalla10" style="display:none;">		
+
+	</div>
+	
+	<div id="pantalla11" style="display:none;">		
+		
+	</div>
+	
+	<div id="pantalla12" style="display:none;">		
+		
+	</div>
+	
+	<div id="pantalla13" style="display:none;">		
+		
+	</div>
+	
 </body>
 </html>
 
