--- a/www/index.html
+++ b/www/index.html
@@ -6,10 +6,10 @@
     <script>
 		
 		function IntercambioVisual(obj1,obj2){
-			if(obj1=="string"){
+			if( typeof(obj1)=="string"){
 				obj1= document.getElementById(obj1);
 			}
-			if(obj1=="string"){
+			if(typeof(obj2)=="string"){
 				obj2= document.getElementById(obj2);
 			}
 			obj1.style.display="none";			
