--- a/www/index.html
+++ b/www/index.html
@@ -64,7 +64,7 @@
 	
 	<div id="pantalla3" style="display:none;">		
 		<img src="media/logo.png" style="width:60%;display:block;margin:auto;margin-top:20px;" />
-		<button onkeypress="OnEnter(event,function(){IntercambioVisual('pantalla3','pantalla4')});" style="background:url(media/pedal3.png);background-size:contain;height:250px;width:80%;margin:auto;margin-top:20px;background-repeat:no-repeat;background-position:center;padding-top:50px;border:0px;" onclick="Acceder();">Acceder</button>
+		<button onclick="IntercambioVisual('pantalla3','pantalla4');" style="background:url(media/pedal3.png);background-size:contain;height:250px;width:80%;margin:auto;margin-top:20px;background-repeat:no-repeat;background-position:center;padding-top:50px;border:0px;" onclick="Acceder();">Acceder</button>
 	</div>
 	
 	<div id="pantalla4" style="display:none;">	
