--- a/www/index.html
+++ b/www/index.html
@@ -147,7 +147,7 @@
 	
 	<div id="pantalla10" style="display:none;">		
 		<h2><button><img src="media/flecha.png" onclick="IntercambioVisual('10','pantalla4');"  />CONTACTO</button></h2>
-		<div>
+		<div class=" submenu-cont">
 			<input placeholder="Nombre" />
 			<input placeholder="E-mail" />
 			<label>Escriba su mensaje</label>
@@ -158,7 +158,7 @@
 	<div id="pantalla11" style="display:none;">		
 		<h2 style="margin-bottom:0px;"><button><img src="media/flecha.png"  onclick="IntercambioVisual('pantalla4','pantalla11');" />CARRERA 05-JUN-18</button></h2>
 		<img src="media/rodada.png" style="width:100%;margin:0px;" />
-		<ul class="menu-intermedio" style="margin:20px;margin-top:0px;">
+		<ul class="menu-intermedio submenu-cont" style="margin:20px;margin-top:0px;">
 			<li><b>FECHA:</b><i>SABADO 05 DE JUNIO DEL 2018</i></li>
 			<li><b>LUGAR:</b><i>AUTODROMO DE PUEBLA</i></li>
 			<li><b>HORARIO:</b><i>09:00 HRS</i></li>
@@ -173,7 +173,7 @@
 	
 	<div id="pantalla12" style="display:none;">		
 		<h2><button><img src="media/flecha.png"  onclick="IntercambioVisual('pantalla8','pantalla12');"  />CARRERA 05-JUN-18</button></h2>
-		<ul class="menu-intermedio" style="margin:20px;">
+		<ul class="menu-intermedio submenu-cont" style="margin:20px;">
 			<li><b>FECHA:</b><i>SABADO 05 DE JUNIO DEL 2018</i></li>
 			<li><b>LUGAR:</b><i>AUTODROMO DE PUEBLA</i></li>
 			<li><b>HORARIO:</b><i>09:00 HRS</i></li>
