--- a/www/index.html
+++ b/www/index.html
@@ -51,11 +51,11 @@
 		}
 
 		function onDeviceReady() {
-			var div1 = document.getElementById("seleccionar-ubicacion");
+			/*var div1 = document.getElementById("seleccionar-ubicacion");
 			var map1 = plugin.google.maps.Map.getMap(div1);
 			var div2 = document.getElementById("mapa-actual");
 			var map2 = plugin.google.maps.Map.getMap(div2);
-			  
+			  */
 		}
 
 		function Acceder(){
